--- a/src/main/antora/modules/ROOT/nav.adoc
+++ b/src/main/antora/modules/ROOT/nav.adoc
@@ -1,5 +1,4 @@
-* xref:introduction-and-preface/index.adoc[]
-** xref:introduction-and-preface/introduction.adoc[]
+* xref:introduction-and-preface/index.adoc[Preface]
 ** xref:introduction-and-preface/preface-neo4j.adoc[]
 ** xref:introduction-and-preface/preface-sd.adoc[]
 ** xref:introduction-and-preface/preface-sdn.adoc[]
@@ -25,9 +24,10 @@
 ** xref:query-by-example.adoc[]
 ** xref:repositories/scrolling.adoc[]
 ** xref:repositories/sdn-extension.adoc[]
+** xref:repositories/query-keywords-reference.adoc
+** xref:repositories/query-return-types-reference.adoc
 
-* xref:projections.adoc[]
-** xref:repositories/projections.adoc[]
+* xref:repositories/projections.adoc[]
 ** xref:projections/sdn-projections.adoc[]
 
 * xref:testing.adoc[]
@@ -38,9 +38,6 @@
 
 * xref:faq.adoc[]
 
-* xref:appendix.adoc[]
-** xref:appendix/index.adoc[Appendix A: Spring Data Neo4j]
-** xref:repositories/query-keywords-reference.adoc[Appendix B: Repository query keywords]
-** xref:repositories/query-return-types-reference.adoc[Appendix C: Repository query return types]
+* xref:appendix/index.adoc[]
 
 * https://github.com/spring-projects/spring-data-commons/wiki[Wiki]
