--- a/src/main/antora/modules/ROOT/pages/appendix/index.adoc
+++ b/src/main/antora/modules/ROOT/pages/appendix/index.adoc
@@ -1,10 +1,8 @@
 [[sdn-appendix]]
 [appendix]
-= Spring Data Neo4j
+= Appendix
 
 :leveloffset: +1
-
-include::conversions.adoc[]
 
 include::neo4j-client.adoc[]
 
