GH-2790 - Point to Spring Data Commons Wiki for changelog.
Closes #2790

--- a/README.adoc
+++ b/README.adoc
@@ -156,7 +156,7 @@ Having trouble with Spring Data? We’d love to help!
 https://docs.spring.io/spring-data/neo4j/reference/[reference documentation], and https://docs.spring.io/spring-data/neo4j/docs/current/api/[Javadocs].
 * Learn the Spring basics – Spring Data builds on Spring Framework, check the https://spring.io[spring.io] web-site for a wealth of reference documentation.
 If you are just starting out with Spring, try one of the https://spring.io/guides[guides].
-* If you are upgrading, check out the https://docs.spring.io/spring-data/neo4j/docs/current/changelog.txt[changelog] for "`new and noteworthy`" features.
+* If you are upgrading, check out the https://github.com/spring-projects/spring-data-commons/wiki/#release-notes[changelog of the individual release version] for "`new and noteworthy`" features.
 * Ask a question - we monitor https://stackoverflow.com[stackoverflow.com] for questions tagged with https://stackoverflow.com/questions/tagged/spring-data-neo4j[spring-data-neo4j].
 * Report bugs with Spring Data Neo4j at https://github.com/spring-projects/spring-data-neo4j/issues[github.com/spring-projects/spring-data-neo4j/issues].
 
