GH-2800 - Introduce additional loggers for cypher notifications.
Closes #2800

--- a/src/main/antora/modules/ROOT/pages/appendix/index.adoc
+++ b/src/main/antora/modules/ROOT/pages/appendix/index.adoc
@@ -12,6 +12,8 @@ include::custom-queries.adoc[]
 
 include::spatial-types.adoc[]
 
+include::logging.adoc[]
+
 include::migrating.adoc[]
 
 include::build.adoc[]
