--- a/src/main/asciidoc/appendix/index.adoc
+++ b/src/main/asciidoc/appendix/index.adoc
@@ -14,6 +14,8 @@ include::custom-queries.adoc[]
 
 include::spatial-types.adoc[]
 
+include::logging.adoc[]
+
 include::migrating.adoc[]
 
 include::build.adoc[]
