GH-2800 - Loggers for each Cypher category.

--- a/src/main/asciidoc/appendix/logging.adoc
+++ b/src/main/asciidoc/appendix/logging.adoc
@@ -1,16 +1,46 @@
 [[logging]]
 = Logging
 
-Spring Data Neo4j defines two named logger to log Cypher statements and warnings.
+Spring Data Neo4j provides multiple loggers for https://neo4j.com/docs/status-codes/current/notifications/all-notifications/[Cypher notifications], starting with version 7.1.5.
+The logger `org.springframework.data.neo4j.cypher` includes all statements that were invoked by Spring Data Neo4j and all notifications sent from the server.
+To exclude or elevate some categories, the following loggers are in place:
 
-== Cypher statements and statement related warnings/errors
+* `org.springframework.data.neo4j.cypher.performance`
++
+Includes `Neo.ClientNotification.Statement.CartesianProduct`,
+`Neo.ClientNotification.Statement.UnboundedVariableLengthPattern`,
+`Neo.ClientNotification.Statement.ExhaustiveShortestPath`,
+`Neo.ClientNotification.Statement.NoApplicableIndex`,
+`Neo.ClientNotification.Statement.EagerOperator`,
+`Neo.ClientNotification.Statement.DynamicProperty`,
+`Neo.ClientNotification.Statement.CodeGenerationFailed`
 
-`org.springframework.data.neo4j.cypher` includes all statements that were invoked by Spring Data Neo4j and warnings/errors sent from the server
+* `org.springframework.data.neo4j.cypher.hint`
++
+Includes `Neo.ClientNotification.Statement.JoinHintUnfulfillableWarning`,
+`Neo.ClientNotification.Schema.HintedIndexNotFound`
 
-== Cypher notifications
+* `org.springframework.data.neo4j.cypher.unrecognized`
++
+Includes `Neo.ClientNotification.Database.HomeDatabaseNotFound`,
+`Neo.ClientNotification.Statement.UnknownLabelWarning`,
+`Neo.ClientNotification.Statement.UnknownRelationshipTypeWarning`,
+`Neo.ClientNotification.Statement.UnknownPropertyKeyWarning`
 
-`org.springframework.data.neo4j.cypher.notifications` is used to catch notifications regarding missing properties, labels and relationship types.
-Additionally, it also is responsible for the deprecation warnings, including usage of the deprecated `id()`.
-As we have experienced that those messages can be overwhelming when used in combination with Spring Data Neo4j, this logger catches all
-`Neo.ClientNotification.Statement.UnknownRelationshipTypeWarning`, `Neo.ClientNotification.Statement.UnknownLabelWarning`, `Neo.ClientNotification.Statement.UnknownPropertyKeyWarning`, `Neo.ClientNotification.Statement.FeatureDeprecationWarning`.
-If you rely purely on Spring Data Neo4j's generated statements or are confident with your custom Cypher statements, you can set this logger to `ERROR` level.
+* `org.springframework.data.neo4j.cypher.unsupported`
++
+Includes `Neo.ClientNotification.Statement.RuntimeUnsupportedWarning`,
+`Neo.ClientNotification.Statement.RuntimeExperimental`
+
+* `org.springframework.data.neo4j.cypher.deprecation`
++
+Includes `Neo.ClientNotification.Statement.FeatureDeprecationWarning`,
+`Neo.ClientNotification.Request.DeprecatedFormat`
+
+* `org.springframework.data.neo4j.cypher.generic`
++
+Includes `Neo.ClientNotification.Statement.SubqueryVariableShadowing`,
+`Neo.ClientNotification.Statement.ParameterNotProvided`,
+`Neo.ClientNotification.Procedure.ProcedureWarning`,
+`Neo.ClientNotification.Statement.UnsatisfiableRelationshipTypeExpression`,
+`Neo.ClientNotification.Statement.RepeatedRelationshipReference`
